@@ -39,7 +39,7 @@ standard-define			0
 
 # Default source reference-format; values: FIXED, FREE, COBOL85,
 # VARIABLE, XOPEN, XCARD, CRT, TERMINAL, COBOLX
-format:				fixed
+format:				auto
 
 # Value: int
 tab-width:			8
